--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -21,7 +23,25 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-shadow": "off",
+      "no-console": "off",
+      "arrow-parens": "off",
+      "no-unused-vars": "off",
+      "no-extra-boolean-cast": "off",
+      "no-else-return": "off",
+      "no-plusplus": "off",
+      "no-use-before-define": "off",
+      "no-restricted-syntax": "off",
+      "no-underscore-dangle": "off",
+      "func-names": "off",
+      "consistent-return": "off",
+      "space-before-function-paren": "off",
+      "no-param-reassign": "off",
+      "no-restricted-globals": "off",
+      "guard-for-in": "off"
+    }
   },
   "browserslist": {
     "production": [
